--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "engines": {
         "node": "8"
     },
-    "proxy": "http://localhost:3001/",
+    "proxy": "http://localhost:3001",
     "dependencies": {
         "axios": "^0.17.1",
         "history": "^4.7.2",
