--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,12 @@
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
     },
+    "jest": {
+        "collectCoverageFrom": [
+          "src/**/*.{js,jsx,ts,tsx}",
+          "!<rootDir>/node_modules/",
+          "!<rootDir>/path/to/dir/"
+        ]},
     "devDependencies": {
         "enzyme": "^3.2.0",
         "enzyme-adapter-react-16": "^1.1.0",
